# Andromeda

./: .cproject  .gitattributes  .gitignore  .project  CMakeLists.txt  README.md  build.bat
CMakeBuild/: CMakeLists.txt
andromeda/: andromeda.cpp  andromeda.h
andromeda/app/: Application.hpp  FrameRate.cpp  FrameRate.hpp  InputSys.hpp  MainLoopThread.hpp  Window.cpp  Window.hpp  WindowApplication.hpp  app.h
andromeda/font/: FontUtils.hpp  ImageFont.hpp  font.h
andromeda/graphics/: DoubleFramebuffer.cpp  DoubleFramebuffer.hpp  Framebuffer.cpp  Framebuffer.hpp  Quad.hpp  Renderable.cpp  Renderable.hpp  RenderableModel.cpp  RenderableModel.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture2D.cpp  Texture2D.hpp  VertexAttribute.cpp  VertexAttribute.hpp  graphics.h
andromeda/image/: ColorChannel.hpp  ColorRGBA.cpp  ColorRGBA.hpp  ColorRGBAVector.cpp  ColorRGBAVector.hpp  ImageUtils.cpp  ImageUtils.hpp  Pixel.cpp  Pixel.hpp  RasterImage.cpp  RasterImage.hpp  image.h
andromeda/io/: Files.cpp  Files.hpp
andromeda/macros/: AudioProcess.h  Codec.h  Debug.h  ImageProcess.h  Math.h  Utils.h  macros.h
andromeda/math/: Matrix.hpp  Quaternion.hpp  Transform.hpp  Vector.hpp
andromeda/media/: AudioCodec.cpp  AudioCodec.hpp  AudioUtils.cpp  AudioUtils.hpp  Muxer.cpp  Muxer.hpp  PCMAudio.cpp  PCMAudio.hpp  Sample.cpp  Sample.hpp  SoundGenerator.cpp  SoundGenerator.hpp  VideoCodec.cpp  VideoCodec.hpp  VideoUtils.cpp  VideoUtils.hpp  media.h
andromeda/traits/: Logic.h  Types.h
andromeda/util/: FloatArithmetic.hpp  GLUtils.cpp  GLUtils.hpp  LimitCounter.hpp  LinkedChunkBuffer.hpp  StringUtils.cpp  StringUtils.hpp  Synchronized.cpp  Synchronized.hpp  Thread.hpp  util.h
cmake/: x86_64-windows-toolchain.cmake
dep/: paths.xml
dep/stb/: stb_image_write.h
include/: andromeda.h
(+207 files in other folders)
